[package]
name = "been-there"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }


# [package]
# name = "todos"
# version = "0.1.0"
# edition = "2021"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# yew = "0.19"
# web-sys = "0.3.59"
# wasm-bindgen = "0.2"
# wasm-logger = "0.2.0"
# serde = "1.0.144"
# reqwest = { version = "0.11.11", features = ["json"] }
# tokio = { version = "1.20.1", features = ["full"] }

